--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 	</style>
 </head>
 <body>
-    <h1>WHAT YOUR ACTUAL DADDY CALL YOU?</h1>
+	<div><h1>WHAT YOUR ACTUAL DADDY CALL YOU?</h1></div>
+    
 	<div class="container">
 
 		<div class="door">
@@ -85,11 +86,11 @@
 		</div>
 
 	</div>
-
-	<button class="no-btn">RAAANI</button>
-	<button class="yes-btn">LADOOO</button>
+    <div>	<button class="no-btn">RAAANI</button>
+		<button class="yes-btn">LADOOO</button></div>
+    <div>
 	<h2>The picture above in the door dipicts <b>"THE BHAI BHEN PYYAR"</b></h2>
-    <h3>The Daddy we were talking about</h3>
+    <h3>The Daddy we were talking about</h3></div>
 	<img src="finaldaughter.png">
 	<script type="text/javascript">
 		var door = document.querySelector('.door');
