--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 	</style>
 </head>
 <body>
-	<div><h1>WHAT YOUR ACTUAL DADDY CALL YOU?</h1></div>
-    
+    <h1>WHAT YOUR ACTUAL DADDY CALL YOU?</h1>
 	<div class="container">
 
 		<div class="door">
@@ -86,11 +85,11 @@
 		</div>
 
 	</div>
-    <div>	<button class="no-btn">RAAANI</button>
-		<button class="yes-btn">LADOOO</button></div>
-    <div>
+
+	<button class="no-btn">RAAANI</button>
+	<button class="yes-btn">LADOOO</button>
 	<h2>The picture above in the door dipicts <b>"THE BHAI BHEN PYYAR"</b></h2>
-    <h3>The Daddy we were talking about</h3></div>
+    <h3>The Daddy we were talking about</h3>
 	<img src="finaldaughter.png">
 	<script type="text/javascript">
 		var door = document.querySelector('.door');
